--- a/CalOrdersJET/src/js/views/productUpdate.html
+++ b/CalOrdersJET/src/js/views/productUpdate.html
@@ -77,7 +77,7 @@ THE SOFTWARE.
                         <div class="oj-flex">  
                             <div class="oj-flex-item">
                                 <label for="productName">Product Name:</label>
-                                <input id="productName"  type="text" required maxlength="45"
+                                <input id="productName"  type="text" required 
                                        data-bind="ojComponent: {
                                                 component: 'ojInputText', 
                                                 value:productName, required: true,
@@ -234,7 +234,7 @@ THE SOFTWARE.
                         <div class="oj-flex"> 
                             <div class="oj-flex-item">
                                 <label for="productPrice">Product Price:</label>
-                                <input id="productPrice" type="text"  required maxlength="9"
+                                <input id="productPrice" type="text"  required maxlength="2"
                                        data-bind="event: { change: computeContractPrice} , ojComponent: {
                                     component: 'ojInputText', 
                                     value: productPrice, 
@@ -314,7 +314,7 @@ THE SOFTWARE.
                 <div id="productPicturePanel" class="oj-panel oj-flex-item">
 
                     <img alt="product" data-bind="attr: {
-                        id: 'productPicture', 
+                        id: 'productImage' + prdUid(), 
                         src: getPhoto(), 
                         height: medium() ? '400' : '200',
                         width: medium() ? '400' : '200'}"/>
