--- a/CalOrdersJET/src/js/views/orderConfirmation.html
+++ b/CalOrdersJET/src/js/views/orderConfirmation.html
@@ -24,170 +24,192 @@
 <div id="cartWrapperDiv" class="oj-hybrid-padding">
 
     <!-- Page Title -->
-    <div id="pageTitleContainer" class="oj-flex-item oj-sm-6">
+    <div id="pageTitleContainer" class="oj-flex-item oj-sm-12">
         <h2 style="margin-bottom:0">Order Confirmation</h2>
-         
-
     </div>
+
+    <!-- global error messages -->
+    <div class="oj-flex-item oj-messaging-inline-container" id="errorMessage" aria-live="polite" hidden>
+        <div class="oj-padding-vertical"></div>
+        <div class="oj-message oj-message-error">
+            <div class="oj-component-icon oj-message-status-icon oj-message-error-icon" title="Error" role="img"></div>
+            <div class="oj-message-content">
+                <div class="oj-message-summary">Error</div>
+                <div class="oj-message-detail">
+                    <span data-bind="text: errorMessage"/>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end global error message -->
     
     
-        <!-- global error messages -->
-        <div class="oj-flex-item oj-messaging-inline-container" id="errorMessage" aria-live="polite" hidden>
-            <div class="oj-padding-vertical"></div>
-            <div class="oj-message oj-message-error">
-                <div class="oj-component-icon oj-message-status-icon oj-message-error-icon" title="Error" role="img"></div>
-                <div class="oj-message-content">
-                    <div class="oj-message-summary">Error</div>
-                    <div class="oj-message-detail">
-                        <span data-bind="text: errorMessage"/>
+
+    <!-- global error messages -->
+    <div class="oj-flex-item oj-messaging-inline-container" id="confirmationMessage" aria-live="polite">
+        <div class="oj-padding-vertical"></div>
+        <div class="oj-message oj-message-confirmation">
+            <div class="oj-component-icon oj-message-status-icon oj-message-confirmation-icon" title="Confirmation" role="img"></div>
+            <div class="oj-message-content">
+                <div class="oj-message-detail">
+                    <span data-bind="text: 'Thank you for your order'"/>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end global error message -->
+    
+
+    <!-- Page Content -->
+    <div class="oj-panel oj-sm-flex-wrap-nowrap oj-panel-shadow-md">
+
+        <div class="oj-flex oj-sm-12">
+            <div id="cartWrapperDiv" class="oj-panel oj-flex-item oj-sm-flex-wrap-nowrap">
+                <div id="productlistview" >
+                    <div class="oj-flex oj-flex-items-pad oj-sm-flex-direction-column" data-bind="template: smallOnly() ? 'productCardLayout' : 'productListLayout'"></div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="oj-padding-vertical"></div>
+
+        <div class="oj-flex">
+            <!-- CONFIRMATION SUMMARY -->
+            <div class="oj-md-odd-cols-4">
+                <div class="oj-flex">
+                    <div>
+
+                        <div class="oj-sm-justify-content confirmation_bold">Shipping Address:</div>
+                        <div class="oj-padding-vertical"></div>
+                        <div class="oj-sm-justify-content"><div data-bind="text: addressLine1"></div></div>
+                        <!-- ko if: addressLine2 != undefined && addressLine2.length > 0 -->
+                        <div class="oj-sm-justify-content"><div data-bind="text: addressLine2"></div></div>
+                        <!-- /ko -->
+                        <div class="oj-sm-justify-content"><div data-bind="text: cityStateZip"></div></div>
+
+
+                        <div>
+
+                            <div class="oj-padding-vertical"></div>
+                            <div class="oj-sm-justify-content confirmation_bold">Order Totals:</div>
+                            <div class="oj-padding-vertical"></div>
+                            <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total:</div> <div class="confirmation_float_right" data-bind="text: itemTotalPrice"></div></div></div>
+                            <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Shipping:</div> <div class="confirmation_float_right" data-bind="text: shippingPrice"></div></div></div>
+                            <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total Price:</div> <div class="confirmation_float_right" data-bind="text: totalPrice"></div></div></div>
+                        </div>
+                    </div>
+                </div>
+                <!-- END CONFIRMATION SUMMARY -->
+            </div>
+        </div>
+
+        <div class="oj-flex oj-sm-justify-content-flex-end">
+
+            <div class="oj-flex">    
+
+                <button id= "continueShopping" 
+                        data-bind="click: continueShoppingClick, ojComponent: { component: 'ojButton', label: 'Continue Shopping' }">
+                </button> 
+            </div>
+
+        </div> 
+    </div>
+</div>
+
+<!-- Product Card View -->
+<script id="productCardLayout" type="text/html">
+    <div class="oj-flex oj-flex-items-pad">
+        <ul id="listviewcard"
+            class="oj-flex oj-listview-card-layout"
+            data-bind="ojComponent: {component: 'ojListView',
+                data: cardViewDataSource,
+                rootAttributes: {'style': 'width:100%'},
+            item: {template: 'productcard_template'}}">
+        </ul>
+    </div>
+    <div class="oj-flex oj-flex-items-pad">
+        <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', mode: 'loadMore',data: cardViewDataSource, pageSize: 10}">
+        </div>
+    </div>
+</script
+
+
+
+
+<!-- Product Card view (card format)  -->
+<script id="productcard_template" type="text/html">
+    <li class="oj-flex-item oj-sm-12"  style="margin:0;border-style:none">
+        <div class="oj-panel" style="margin: 5px 0px 10px 0px;">
+
+            <div data-bind="click: $parent.navigateToProductDetail">
+
+                <div class="oj-flex">
+                    <div class="oj-flex-item oj-sm-12 confirmation_bold_label" data-bind="text: $data['prdName']"></div>
+                </div>
+
+                <div class="oj-padding-vertical"></div>
+
+                <div class="oj-flex">
+                    <div class="oj-flex-item">
+                        <img style="float:left;" 
+                             height="100" width="100" 
+                             data-bind="attr: {alt: $data['prdName'], id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
+                    </div>
+                    <div class="oj-flex-item">
+                        <div class="oj-flex-item">
+                            <span>Quantity: </span><span data-bind="text: $data['quantity']"/>
+                        </div>
+
+                        <div class="oj-padding-vertical"></div>
+                        
+                        <div data-bind="text: $data['prdPrice']"></div>
+                    </div>  
+                </div>
+            </div>
+        </div>
+    </li>
+</script>
+
+<!-- Product List view -->
+<script id="productListLayout" type="text/html">
+    <ul id="listview"
+        data-bind="ojComponent: {component: 'ojListView',
+            data: listViewDataSource,
+            rootAttributes: {style: 'width:100%;overflow:auto; margin-top: 5px'},
+            selectionMode: 'single',
+            item: {template: 'productlist_template'},
+            scrollPolicy: 'loadMoreOnScroll',
+            scrollPolicyOptions: {fetchSize: 10}}">
+    </ul>
+</script>
+
+<!-- Product List view (row format) -->
+<script id="productlist_template" type="text/html">
+    <li class="oj-flex-item oj-sm-12">
+        <div>
+            <div class="oj-flex oj-flex-items-pad">
+                <div class="oj-flex-item oj-sm-2">
+                    <img style="float:left;" 
+                         height="100" width="100" 
+                         data-bind="attr: {alt: $data['prdName'], id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>                    
+                </div>
+                
+                <div class="oj-flex-item oj-sm-4">
+                    <div class="confirmation_bold_label" data-bind="text: $data['prdName']"></div>
+                </div>
+                
+                <div class="oj-flex-item oj-sm-2">
+                    <span>Quantity: </span><span data-bind="text: $data['quantity']"/>
+                </div>
+                <div class="oj-flex-item oj-sm-4">
+
+                    <div class="oj-flex-item oj-sm-only-hide oj-md-4 oj-md-float-end">
+                        <div data-bind="text: $data['prdPrice']"></div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- end global error message -->
-
-        
-        
-
-    <!-- Page Content -->
-    <div class="oj-panel oj-flex oj-sm-flex-wrap-nowrap oj-panel-shadow-md">
-
-       
-
-        <div id="cartWrapperDiv" class="oj-panel oj-flex-item oj-sm-flex-wrap-nowrap">
-
-            <div id="productlistview" >
-                <div class="oj-flex oj-flex-items-pad oj-sm-flex-direction-column" data-bind="template: large() ? 'productListLayout' : 'productCardLayout'"></div>
-            </div>
-
-
-            <!-- Product Card View -->
-            <script id="productCardLayout" type="text/html">
-                <div class="oj-flex oj-flex-items-pad">
-                    <ul id="listviewcard"
-                        class="oj-flex oj-listview-card-layout"
-                        data-bind="ojComponent: {component: 'ojListView',
-                data: cardViewDataSource,
-                rootAttributes: {'style': 'width:100%'},
-            item: {template: 'productcard_template'}}">
-                    </ul>
-                </div>
-                <div class="oj-flex oj-flex-items-pad">
-                    <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 10}">
-                    </div>
-                </div>
-                </script>
-
-                <!-- Product Card view (card format)  -->
-                <script id="productcard_template" type="text/html">
-                    <li class="oj-flex-item oj-sm-12 oj-md-6 oj-lg-4 oj-xl-3" data-bind="event:{keypress:$parent.onEnter}" style="margin:0;border-style:none">
-                        <div class="oj-panel oj-panel-alt1" style="margin: 5px 0px 10px 0px;">
-
-                            <div data-bind="click: $parent.navigateToProductDetail">
-
-                                <div class="oj-flex-item oj-sm-4">
-                                    <img style="float:left;" 
-                                                 height="100" width="100" 
-                                                 data-bind="attr: {alt: $data['prdName'], id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
-                                </div>
-                                <div class="oj-flex-item">
-                                    <h3 aria-label="product description" data-bind="text: $data['prdName']" tabindex="0"></h3>
-                                    <div class="oj-flex-item oj-sm-12 oj-lg-2">
-                                            <span>Quantity: </span><span data-bind="text: $data['quantity']"/>
-                                        </div>
-                                    <div data-bind="text: '$' + $data['prdPrice']"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    </script>
-
-
-
-
-                    <!-- Product List view -->
-                    <script id="productListLayout" type="text/html">
-                        <ul id="listview"
-                            data-bind="ojComponent: {component: 'ojListView',
-                data: cardViewDataSource,
-                rootAttributes: {'style': 'width:100%'},
-            item: {template: 'productlist_template'}}">
-                        </ul>
-                        <div class="oj-flex oj-flex-items-pad">
-                            <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 10}">
-                            </div>
-                        </div>
-                        </script>
-
-                        <!-- Product List view (row format) -->
-                        <script id="productlist_template" type="text/html">
-                            <li class="oj-flex-item oj-sm-12">
-                                <div>
-                                    <div class="oj-flex oj-flex-items-pad">
-                                        <div class="oj-flex-item oj-lg-4 oj-md-4">
-                                            <img style="float:left;" 
-                                                 height="100" width="100" 
-                                                 data-bind="attr: {alt: $data['prdName'], id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
-                                            <div data-bind="text: $data['prdName']"></div>
-                                        </div>
-                                        <div class="oj-flex-item oj-sm-12 oj-lg-2">
-                                            <span>Quantity: </span><span data-bind="text: $data['quantity']"/>
-                                        </div>
-                                        <div class="oj-flex-item oj-lg-5 oj-md-4">
-
-                                            <div class="oj-flex-item oj-sm-only-hide oj-md-4 oj-md-float-end">
-                                                <div data-bind="text: '$' + $data['prdPrice']"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            </script>
-                        </div>
-                    </div>
-                    <div class="oj-padding-vertical"></div>
-
-
-                    <!-- CONFIRMATION SUMMARY -->
-                    <div class="oj-md-odd-cols-4">
-                        <div class="oj-flex">
-                            <div>
-
-                                <div class="oj-sm-justify-content confirmation_bold">Shipping Address:</div>
-                                <div class="oj-padding-vertical"></div>
-                                <div class="oj-sm-justify-content"><div data-bind="text: addressLine1"></div></div>
-                                <!-- ko if: addressLine2 != undefined && addressLine2.length > 0 -->
-                                <div class="oj-sm-justify-content"><div data-bind="text: addressLine2"></div></div>
-                                <!-- /ko -->
-                                <div class="oj-sm-justify-content"><div data-bind="text: cityStateZip"></div></div>
-
-
-                                <div>
-
-                                    <div class="oj-padding-vertical"></div>
-                                    <div class="oj-sm-justify-content confirmation_bold">Order Totals:</div>
-                                    <div class="oj-padding-vertical"></div>
-                                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total:</div> <div class="confirmation_float_right" data-bind="text: itemTotalPrice"></div></div></div>
-                                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Shipping:</div> <div class="confirmation_float_right" data-bind="text: shippingPrice"></div></div></div>
-                                    <div class="oj-sm-justify-content"><div><div class="confirmation_bold_label">Total Price:</div> <div class="confirmation_float_right" data-bind="text: totalPrice"></div></div></div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- END CONFIRMATION SUMMARY -->
-
-
-
-                    </div>
-
-                    <div class="oj-padding-vertical"></div>
-
-                    <div class="oj-flex oj-sm-justify-content-flex-end">
-
-                        <div class="oj-flex">    
-
-                            <button id= "continueShopping" 
-                                    data-bind="click: continueShoppingClick, ojComponent: { component: 'ojButton', label: 'Continue Shopping' }">
-                            </button> 
-                        </div>
-
-                    </div>
+    </li>
+</script>
