--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -289,7 +289,7 @@
                             </div>
 
                             <!-- Product Search Result type -->
-                            <div class="oj-flex-item oj-sm-only-hide  oj-padding-horizontal">
+                            <div class="oj-flex-item oj-md-down-hide oj-padding-horizontal">
                                 <div id="layoutSet" class="oj-buttonset-width-auto" aria-label="Choose layout type."  style="float: right" data-bind="ojComponent: {component: 'ojButtonset', checked: productLayoutType}">
                                     <label for="cardLayout"></label>
                                     <input id="cardLayout" type="radio" name="layoutGroup" value="productCardLayout"
@@ -331,7 +331,7 @@
                 <!-- Product Search Results (uses either productCardLayout or productListLayout) -->
                 <!-- ko if: ready -->
                 <div id="productlistview" >
-                    <div class="oj-flex oj-flex-items-pad oj-sm-flex-direction-column" data-bind="template: productLayoutType()"></div>
+                    <div class="oj-flex oj-flex-items-pad oj-sm-flex-direction-column" data-bind="template: large()?  productLayoutType() : 'productCardLayout'"></div>
                 </div>
                 <!-- /ko -->
             </div>
@@ -396,7 +396,7 @@
 <!-- Product Card view (card format)  -->
 <script id="productcard_template" type="text/html">
     <li class="oj-flex-item oj-sm-12 oj-md-6 oj-lg-4 oj-xl-3" style="margin:0;border-style:none">
-        <div class="oj-panel oj-panel-alt1" style="margin: 5px 0px 10px 0px; min-height: 350px">
+        <div class="oj-panel" style="margin: 5px 0px 10px 0px; min-height: 350px">
 
             <div data-bind="click: $parent.navigateToProductDetail">
 
@@ -412,6 +412,18 @@
             <!-- ko if: $parent.user -->
             <div class="oj-padding-vertical"></div>
             <div style="position: absolute; bottom: 0px">
+
+                <div class="oj-flex-item" style="margin-bottom: 10px">
+                    <input id="quantity" aria-label="quantity"
+                           data-bind="ojComponent: {
+                         component: 'ojInputNumber', 
+                         max:10000,
+                         min:1, 
+                         step:1, 
+                         value: $data.quantity,
+                         rootAttributes: {style:'max-width:40px; padding-right:20px'}}"/>
+                </div>
+
                 <div class="oj-flex-item">
                     <button id= "addToCart" data-bind="click: $parent.addToCart, ojComponent: { component: 'ojButton', label: 'Add to Cart'}"></button> 
                 </div>
@@ -453,17 +465,42 @@
     <li class="oj-flex-item oj-sm-12">
         <div>
             <div class="oj-flex oj-flex-items-pad">
-                <div class="oj-flex-item oj-lg-4 oj-md-4" data-bind="click: $parent.navigateToProductDetail">
-                    <img style="float:left;" height="100" width="100" data-bind="attr: {alt: $data['prdName'],  id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
-                    <h2 class="product-search-name" data-bind="text: $data['prdName']"></h2>
+                <div class="oj-flex-item oj-sm-2" data-bind="click: $parent.navigateToProductDetail">
+                    <img style="float: left" height="100" width="100" data-bind="attr: {alt: $data['prdName'],  id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
                 </div>
 
-                <div class="oj-flex-item oj-md-4">
-                    <div class="product-detail-price" data-bind="text: '$' + $data['prdCntrUnitPrice']"></div>
+                <div class="oj-flex-item oj-sm-6" data-bind="click: $parent.navigateToProductDetail">
+                    <div class="product-search-name" data-bind="text: $data['prdName']"></div>
                 </div>
+
+                <div class="oj-flex-item oj-sm-2">
+                    <div class="oj-flex">
+                        <div class="oj-flex-item">
+                            <div class="product-detail-price" data-bind="text: '$' + $data['prdCntrUnitPrice']"></div>
+                        </div>
+                    </div>
+
+                    <div class="oj-padding-vertical"></div>
+
+                    <!-- ko if: $parent.user -->
+                    <div class="oj-flex">
+                        <div class="oj-flex-item">
+                            <input id="quantity" aria-label="quantity"
+                                   data-bind="ojComponent: {
+                         component: 'ojInputNumber', 
+                         max:10000,
+                         min:1, 
+                         step:1, 
+                         value: $data.quantity,
+                         rootAttributes: {style:'max-width:40px; padding-right:20px'}}"/>
+                        </div>
+                    </div>
+                    <!-- /ko -->
+                </div>
+
 
                 <!-- ko if: $parent.user -->
-                <div class="oj-flex-item oj-md-4 oj-sm-float-end">
+                <div class="oj-flex-item oj-sm-2 oj-sm-float-end">
                     <button id= "addToCart" data-bind="click: $parent.addToCart, ojComponent: { component: 'ojButton', label: 'Add to Cart'}"></button>
 
                     <div id="compareProductWrapper"
