--- a/CalOrdersJET/src/js/views/orderConfirmation.html
+++ b/CalOrdersJET/src/js/views/orderConfirmation.html
@@ -164,7 +164,7 @@
 
                         <div class="oj-padding-vertical"></div>
                         
-                        <div data-bind="text: $data['prdPrice']"></div>
+                        <div data-bind="text: $parent.getPrice($data['prdCntrUnitPrice'])"></div>
                     </div>  
                 </div>
             </div>
@@ -206,7 +206,7 @@
                 <div class="oj-flex-item oj-sm-4">
 
                     <div class="oj-flex-item oj-sm-only-hide oj-md-4 oj-md-float-end">
-                        <div data-bind="text: $data['prdPrice']"></div>
+                        <div data-bind="text: $parent.getPrice($data['prdCntrUnitPrice'])"></div>
                     </div>
                 </div>
             </div>
