[#140533927] Order History pages for user and admin. Sorting on price is not working correctly, probably because the price is being represented as a string instead of a numeric value. Solved

--- a/CalOrdersJET/src/js/views/orderHistory.html
+++ b/CalOrdersJET/src/js/views/orderHistory.html
@@ -43,7 +43,7 @@
                                   {headerText: 'Status', field: 'orderStatus', sortable: 'enabled'},   
                                   {headerText: 'PO No.', field: 'orderPoNumber', sortable: 'enabled', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide'},
                                   {headerText: 'Agency', field: 'orderAgency', sortable: 'enabled', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide'},
-                                  {headerText: 'Price', field: 'orderPrice', sortable: 'enabled', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide'},
+                                  {headerText: 'Price', field: 'orderPrice', sortable: 'enabled', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide',renderer: priceRenderer},
                                   {headerText: 'Description', field: 'orderDescription', sortable: 'enabled', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide'}], 
                                  rootAttributes: {'style':'width: 100%;'}}">
                 </table>
