--- a/CalOrdersJET/src/js/views/orderHistoryAdmin.html
+++ b/CalOrdersJET/src/js/views/orderHistoryAdmin.html
@@ -43,7 +43,7 @@
                                   {headerText: 'Status', field: 'orderStatus', sortable: 'enabled'},   
                                   {headerText: 'PO No.', field: 'orderPoNumber', sortable: 'enabled', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide'},
                                   {headerText: 'Agency', field: 'orderAgency', sortable: 'enabled', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide'},
-                                  {headerText: 'Price', field: 'orderPrice', sortable: 'enabled', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide'},
+                                  {headerText: 'Price', field: 'orderPrice', sortable: 'enabled', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide',renderer: priceRenderer},
                                   {headerText: 'Description', field: 'orderDescription', sortable: 'enabled', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide'}], 
                                  rootAttributes: {'style':'width: 100%;'}}">
                 </table>
