[#140582559][#139565407] Page formatting for removing items from Cart.  Also fixed issues with high quantity.  Both 1000 and 9000 work as expected.

--- a/CalOrdersJET/src/js/views/cart.html
+++ b/CalOrdersJET/src/js/views/cart.html
@@ -59,14 +59,15 @@
         <div class="oj-padding-vertical"></div>
 
         <div class="oj-flex">
-
             <!-- Remove products button -->
-
             <div class="oj-flex-item">                              
                 <button id= "removeProductsButton" data-bind="click: removeProductsFromCart, ojComponent: { component: 'ojButton', label: 'Remove Selected'}"></button>                             
             </div>
+        </div>  
+        
+           <div class="oj-padding-vertical"></div>     
+           
             <!-- Totals -->
-
             <div class="oj-md-odd-cols-4">
                 <div class="oj-flex">
                     <div>
@@ -80,7 +81,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+       
 
         <!-- Action buttons (Continue Shopping and Order) -->
         <div class="oj-flex oj-sm-justify-content-flex-end">
