--- a/CalOrdersJET/src/js/views/productCompare.html
+++ b/CalOrdersJET/src/js/views/productCompare.html
@@ -61,14 +61,7 @@
                 <div class="oj-padding-vertical"></div>
 
                 <div class="oj-flex-item">
-                    <input id="quantity" aria-label="quantity"
-                           data-bind="ojComponent: {
-                         component: 'ojInputNumber', 
-                         max:10000,
-                         min:1, 
-                         step:1, 
-                         value: productsToCompare()[0].quantity,
-                         rootAttributes: {style:'max-width:40px; padding-right:20px'}}"/>
+                    <input class="product-quantity" id="quantity" data-bind="value: productsToCompare()[0].quantity" aria-label="quantity" type="number" min="1" max="1000"/>
 
                     <button id= "addToCart" data-bind="click: function(data, event) {addToCart(productsToCompare()[0])}, ojComponent: { component: 'ojButton', label: 'Add to Cart'}"></button> 
                 </div>
@@ -96,14 +89,7 @@
                 <div class="oj-flex-item">
 
                     <div class="oj-flex-item">
-                        <input id="quantity" aria-label="quantity"
-                               data-bind="ojComponent: {
-                         component: 'ojInputNumber', 
-                         max:10000,
-                         min:1, 
-                         step:1, 
-                         value: productsToCompare()[1].quantity,
-                         rootAttributes: {style:'max-width:40px; padding-right:20px'}}"/>
+                        <input class="product-quantity" id="quantity" data-bind="value: productsToCompare()[1].quantity" aria-label="quantity" type="number" min="1" max="1000"/>
 
                         <button id= "addToCart" data-bind="click: function(data, event) {addToCart(productsToCompare()[1])}, ojComponent: { component: 'ojButton', label: 'Add to Cart'}"></button> 
                     </div>
