--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -413,30 +413,20 @@
             <div class="oj-padding-vertical"></div>
             <div style="position: absolute; bottom: 0px">
 
+
                 <div class="oj-flex-item" style="margin-bottom: 10px">
-                    <input id="quantity" aria-label="quantity"
-                           data-bind="ojComponent: {
-                         component: 'ojInputNumber', 
-                         max:10000,
-                         min:1, 
-                         step:1, 
-                         value: $data.quantity,
-                         rootAttributes: {style:'max-width:40px; padding-right:20px'}}"/>
+                    <input class="product-quantity" id="quantity" data-bind="value: quantity" aria-label="quantity" type="number" min="1" max="1000"/>
                 </div>
 
                 <div class="oj-flex-item">
-                    <button id= "addToCart" data-bind="click: $parent.addToCart, ojComponent: { component: 'ojButton', label: 'Add to Cart'}"></button> 
+                    <button class="oj-button oj-enabled oj-default oj-button-full-chrome oj-button-text-only"  id= "addToCart" data-bind="click: $parent.addToCart"><div class="oj-button-label"><span class="oj-button-text">Add to Cart</span></div></button> 
                 </div>
 
                 <div class="oj-flex-item" >
-                    <div id="compareProductWrapper" 
-                         data-bind=
-                         "ojComponent: {
-                        component: 'ojCheckboxset', 
-                        value: compareProduct}" >
+                    <div id="compareProductWrapper">
                         <span class="oj-choice-row">
-                            <input data-bind="attr: {id: 'compareProduct' + $data['prdUid']}" type="checkbox" value="true">
-                            <label data-bind="attr: {for: 'compareProduct' + $data['prdUid']}">Compare</label>
+                            <input data-bind="checked: compareProduct, attr: {id: 'compareProduct' + $data['prdUid']}" type="checkbox" value="true">
+                            <label style="padding-left: 5px" data-bind="attr: {for: 'compareProduct' + $data['prdUid']}">Compare</label>
                         </span>
                     </div>
                 </div>
@@ -485,14 +475,7 @@
                     <!-- ko if: $parent.user -->
                     <div class="oj-flex">
                         <div class="oj-flex-item">
-                            <input id="quantity" aria-label="quantity"
-                                   data-bind="ojComponent: {
-                         component: 'ojInputNumber', 
-                         max:10000,
-                         min:1, 
-                         step:1, 
-                         value: $data.quantity,
-                         rootAttributes: {style:'max-width:40px; padding-right:20px'}}"/>
+                            <input class="product-quantity" id="quantity" data-bind="value: quantity" aria-label="quantity" type="number" min="1" max="1000"/>
                         </div>
                     </div>
                     <!-- /ko -->
@@ -501,16 +484,12 @@
 
                 <!-- ko if: $parent.user -->
                 <div class="oj-flex-item oj-sm-2 oj-sm-float-end">
-                    <button id= "addToCart" data-bind="click: $parent.addToCart, ojComponent: { component: 'ojButton', label: 'Add to Cart'}"></button>
+                    <button class="oj-button oj-enabled oj-default oj-button-full-chrome oj-button-text-only"  id= "addToCart" data-bind="click: $parent.addToCart"><div class="oj-button-label"><span class="oj-button-text">Add to Cart</span></div></button> 
 
-                    <div id="compareProductWrapper"
-                         data-bind=
-                         "ojComponent: {
-                        component: 'ojCheckboxset', 
-                        value: compareProduct}" >
+                    <div id="compareProductWrapper">
                         <span class="oj-choice-row">
-                            <input data-bind="attr: {id: 'compareProduct' + $data['prdUid']}" type="checkbox" value="true">
-                            <label data-bind="attr: {for: 'compareProduct' + $data['prdUid']}">Compare</label>
+                            <input data-bind="checked: compareProduct, attr: {id: 'compareProduct' + $data['prdUid']}" type="checkbox" value="true">
+                            <label style="padding-left: 5px" data-bind="attr: {for: 'compareProduct' + $data['prdUid']}">Compare</label>
                         </span>
                     </div>
                 </div>
