--- a/CalOrdersJET/src/js/views/about.html
+++ b/CalOrdersJET/src/js/views/about.html
@@ -31,7 +31,7 @@
 
 
 
-
+                    <p><strong><span data-bind="text: userName"></span></strong></p>
                     <p><strong>CalOrders version: <span data-bind="text: applicationVersion"></span></strong></p>
                 </div>
             </div>
